--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-toastify": "^5.3.2",
     "redux": "^4.0.4",
     "redux-saga": "^1.0.5",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "sweetalert2": "^8.14.0",
+    "sweetalert2-react-content": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
